Fix color of text in projects for dark mode

--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -41,12 +41,12 @@ a:hover {
   background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
   background-clip: text;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  -webkit-text-fill-color: $primary-color;
 
   // Responsive text purple style
   @include respond(phone) {
     background-image: none;
-    -webkit-text-fill-color: $secondary-color;
+    -webkit-text-fill-color: $primary-color;
   }
 
   &:hover {
